--- a/src/modules/previewpane/ArchivePreviewHandler/Strings/en-us/Resources.resw
+++ b/src/modules/previewpane/ArchivePreviewHandler/Strings/en-us/Resources.resw
@@ -117,82 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="General_Description" xml:space="preserve">
-    <value>PowerToys add-ons for Windows File Explorer.</value>
+  <data name="Archive_Directory_Count" xml:space="preserve">
+    <value>{0} directories</value>
+    <comment>{0} is the number of directories in the archive</comment>
   </data>
-  <data name="Module_Name" xml:space="preserve">
-    <value>File Explorer</value>
+  <data name="Archive_File_Count" xml:space="preserve">
+    <value>{0} files</value>
+    <comment>{0} is the number of files in the archive</comment>
   </data>
-  <data name="Icon_Key_Name" xml:space="preserve">
-    <value>pt-power-preview</value>
+  <data name="Archive_Size" xml:space="preserve">
+    <value>{0} (extracted {1})</value>
+    <comment>{0} is the size of the archive, {1} is the extracted size</comment>
   </data>
-  <data name="Explr_Icons_Prev_Sttngs_Group_Desc" xml:space="preserve">
-    <value>Settings Group Header Text</value>
-  </data>
-  <data name="Explr_Icons_Prev_Sttngs_Group_Text" xml:space="preserve">
-    <value>Explorer Icons</value>
-  </data>
-  <data name="Prvpane_File_Prev_Sttngs_Group_Desc" xml:space="preserve">
-    <value>Settings Group Header Text</value>
-  </data>
-  <data name="Prvpane_File_Prev_Sttngs_Group_Text" xml:space="preserve">
-    <value>Preview pane extensions</value>
-  </data>
-  <data name="Prevpane_Md_Settings_Description" xml:space="preserve">
-    <value>Markdown Previewer</value>
-  </data>
-  <data name="Prevpane_Monaco_Settings_Description" xml:space="preserve">
-    <value>Developer files Previewer</value>
-  </data>
-  <data name="Prevpane_Md_Settings_Displayname" xml:space="preserve">
-    <value>Markdown Previewer</value>
-  </data>
-  <data name="Prevpane_Svg_Settings_Description" xml:space="preserve">
-    <value>Svg Previewer</value>
-  </data>
-  <data name="Prevpane_Svg_Settings_Displayname" xml:space="preserve">
-    <value>SVG Previewer</value>
-  </data>
-  <data name="Svg_Thumbnail_Provider_Settings_Description" xml:space="preserve">
-    <value>Svg Thumbnail Provider</value>
-  </data>
-  <data name="Explr_Svg_Settings_Description" xml:space="preserve">
-    <value>Render SVG images</value>
-  </data>
-  <data name="FileExplorer_Admin_Restart_Warning_Description" xml:space="preserve">
-    <value>Some of the File Explorer modules could not be turned off/on as per your settings. Please restart PowerToys as admin for the changes to take place.</value>
-  </data>
-  <data name="FileExplorer_Admin_Restart_Warning_Title" xml:space="preserve">
-    <value>Couldn't modify File Explorer modules</value>
-  </data>
-  <data name="FileExplorer_Admin_Restart_Warning_Open_Settings" xml:space="preserve">
-    <value>Open Settings</value>
-  </data>
-  <data name="FileExplorer_Admin_Restart_Warning_Dont_Show_Again" xml:space="preserve">
-    <value>Don't show again</value>
-  </data>
-  <data name="Prevpane_Pdf_Settings_Description" xml:space="preserve">
-    <value>PDF Previewer</value>
-  </data>
-  <data name="Prevpane_Pdf_Settings_Displayname" xml:space="preserve">
-    <value>PDF Previewer</value>
-  </data>
-  <data name="Pdf_Thumbnail_Provider_Settings_Description" xml:space="preserve">
-    <value>Pdf Thumbnail Provider</value>
-  </data>
-  <data name="Gcode_Thumbnail_Provider_Settings_Description" xml:space="preserve">
-    <value>G-code Thumbnail Provider</value>
-  </data>
-  <data name="Prevpane_Gcode_Settings_Description" xml:space="preserve">
-    <value>G-code Previewer</value>
-  </data>
-  <data name="Prevpane_Gcode_Settings_Displayname" xml:space="preserve">
-    <value>G-code Previewer</value>
-  </data>
-  <data name="Stl_Thumbnail_Provider_Settings_Description" xml:space="preserve">
-    <value>Stl Thumbnail Provider</value>
-  </data>
-  <data name="Prevpane_Archive_Settings_Description" xml:space="preserve">
-    <value>Archive Previewer</value>
+  <data name="Preview_Fail.Text" xml:space="preserve">
+    <value>Failed to generate preview</value>
   </data>
 </root>
