--- a/src/settings-ui/Settings.UI/Strings/en-us/Resources.resw
+++ b/src/settings-ui/Settings.UI/Strings/en-us/Resources.resw
@@ -3196,4 +3196,10 @@ Activate by holding the key for the character you want to add an accent to, then
     <value>Maximum width (px)</value>
     <comment>px = pixels</comment>
   </data>
+  <data name="FileExplorerPreview_ToggleSwitch_Preview_Archive.Description" xml:space="preserve">
+    <value>.zip, .rar, .7z, .nupkg, ...</value>
+  </data>
+  <data name="FileExplorerPreview_ToggleSwitch_Preview_Archive.Header" xml:space="preserve">
+    <value>Archives</value>
+  </data>
 </root>
